--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task portfolio</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;0,800;1,400&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <header>
-        
+    <!-- Header Section -->
+    <header class="header">
+        <div class="header-container">
+            <h3 class="header-title">All Thinks Are Possible If You believe</h3>
+            <p class="header-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority
+                have suffered alteration in
+                some form, by injected humour, or randomised words</p>
+            <button class="primary-btn header-btn">Contact Us</button>
+        </div>
     </header>
     <main>
 
@@ -16,4 +33,5 @@
 
     </footer>
 </body>
+
 </html>
