My failures of previous year Section Done

--- a/index.html
+++ b/index.html
@@ -26,8 +26,23 @@
             <button class="primary-btn header-btn">Contact Us</button>
         </div>
     </header>
-    <main>
 
+    <!-- main Section -->
+    <main>
+        <section class="banner-container">
+            <img class="banner-img" src="./images/person.png" alt="img">
+            <div class="banner-info">
+                <h3 class="banner-info-title">My failures of previous year</h3>
+                <p class="banner-info-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ol>
+                    <li class="banner-info-list">Contrary to popular belief, is not simply.</li>
+                    <li class="banner-info-list">Contrary to popular belief.</li>
+                    <li class="banner-info-list">Contrary to popular , is not simply.</li>
+                    <li class="banner-info-list">Contrary to popular belief, is not simply.</li>
+                    <li class="banner-info-list">Contrary to popular simply.</li>
+                </ol>
+            </div>
+        </section>
     </main>
     <footer>
 
