done My failures of previous year section

--- a/index.html
+++ b/index.html
@@ -29,19 +29,25 @@
 
     <!-- main Section -->
     <main>
+        <!-- My failures of previous year section -->
         <section class="banner-container">
             <img class="banner-img" src="./images/person.png" alt="img">
             <div class="banner-info">
                 <h3 class="banner-info-title">My failures of previous year</h3>
                 <p class="banner-info-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-                <ol>
-                    <li class="banner-info-list">Contrary to popular belief, is not simply.</li>
-                    <li class="banner-info-list">Contrary to popular belief.</li>
-                    <li class="banner-info-list">Contrary to popular , is not simply.</li>
-                    <li class="banner-info-list">Contrary to popular belief, is not simply.</li>
-                    <li class="banner-info-list">Contrary to popular simply.</li>
-                </ol>
+                <ul>
+                    <li class="banner-info-list"><span class="tick">✓ </span>Contrary to popular belief, is not simply.</li>
+                    <li class="banner-info-list"><span class="tick">✓ </span>Contrary to popular belief.</li>
+                    <li class="banner-info-list"><span class="tick">✓ </span>Contrary to popular , is not simply.</li>
+                    <li class="banner-info-list"><span class="tick">✓ </span>Contrary to popular belief, is not simply.</li>
+                    <li class="banner-info-list"><span class="tick">✓ </span>Contrary to popular simply.</li>
+                </ul>
             </div>
+        </section>
+
+        <!-- My Plans section -->
+        <section class="my-plane">
+            <h3 class="my-plane-title"></h3>
         </section>
     </main>
     <footer>
