--- a/index.html
+++ b/index.html
@@ -47,7 +47,33 @@
 
         <!-- My Plans section -->
         <section class="my-plane">
-            <h3 class="my-plane-title"></h3>
+            <h3 class="my-plane-title">My Plans</h3>
+            <div class="my-plane-item-container">
+
+                <div class="my-plane-item">
+                    <img src="./images/icons/web.png" alt="img" class="my-plane-item-logo">
+                <h4 class="my-plane-item-title">Web Development</h4>
+                <p class="my-plane-item-description">I want to start</p>
+                </div>
+
+                <div class="my-plane-item">
+                    <img src="./images/icons/js.png" alt="img" class="my-plane-item-logo">
+                <h4 class="my-plane-item-title">Javascript</h4>
+                <p class="my-plane-item-description">I want to learn</p>
+                </div>
+
+                <div class="my-plane-item">
+                    <img src="./images/icons/smoke.png" alt="img" class="my-plane-item-logo">
+                <h4 class="my-plane-item-title">Smoking Habit</h4>
+                <p class="my-plane-item-description">I want to end</p>
+                </div>
+
+                <div class="my-plane-item">
+                    <img src="./images/icons/ecom.png" alt="img" class="my-plane-item-logo">
+                <h4 class="my-plane-item-title">ecommerce</h4>
+                <p class="my-plane-item-description">I want to develop</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
