--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Awlays keep a positive mindset section -->
     </main>
     <footer>
 
