done mindset section & compleated main section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
         </section>
 
         <!-- Awlays keep a positive mindset section -->
+        <section class="mindset">
+            <h3 class="mindset-title">Awlays keep a positive mindset</h3>
+            <button class="primary-btn">Call Now</button>
+        </section>
     </main>
     <footer>
 
