Start footer section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
             <button class="primary-btn">Call Now</button>
         </section>
     </main>
+
+    <!-- footer section -->
     <footer>
 
     </footer>
