--- a/index.html
+++ b/index.html
@@ -85,7 +85,26 @@
 
     <!-- footer section -->
     <footer>
-
+        <div class="footer-section-left">
+           <h3 class="footer-section-left-title">Future</h3>
+            <p class="footer-section-left-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <ul class="user-info">
+                <li>Email : info@gmail.com</li>
+                <li>Phone : 01500 00 00 00</li>
+            </ul>
+            <div class="social-link">
+                <a href="https://www.facebook.com/"><img src="./images/icons/fb.png" alt="img"></a>
+                <a href="https://www.twiter.com/"><img src="./images/icons/twitter.png" alt="img"></a>
+                <a href="https://www.youtube.com/"><img src="./images/icons/youtube.png" alt="img"></a>
+            </div>
+        </div>
+        <div class="footer-section-right">
+            <h3 class="footer-section-right-title">Subscribe</h3>
+            <form class="subscribe" action="">
+                <input type="email" name="" id="" placeholder="Enter your email">
+                <input class="primary-btn" type="submit" value="Subscribe">
+            </form>
+        </div>
     </footer>
 </body>
 
